objects/UW_Document_Share__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>UW Document Share</relationshipLabel>
        <relationshipName>UW_Document_Share</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Control_Sheet_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Control Sheet Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>UW Document Share</relationshipLabel>
        <relationshipName>UW_Document_Share</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>UW Document Share</relationshipLabel>
        <relationshipName>UW_Document_Share</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UW_Documents__c</fullName>
        <label>UW Documents</label>
        <referenceTo>Cloufi__UW_Document__c</referenceTo>
        <relationshipLabel>UW Document Share</relationshipLabel>
        <relationshipName>UW_Document_Share</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>UW Document Share</label>
    <nameField>
        <displayFormat>UW Share {0000}</displayFormat>
        <label>UW Document Share Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UW Document Share</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>